# devchat

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/ai/: engine.py
.github/ISSUE_TEMPLATE/analyzer/: code_analyzer.py
.github/_cli/: __init__.py  assist.py  config.py  main.py  workflow.py
.github/_cli/workflow/: manager.py
examples/: refactor_workflow.yaml
langchain_demo/: .gitignore  demo.py  requirements.txt
src/: README.md
src/devchat/cli/: main.py
src/devchat/core/analysis/: analyzer.py
src/devchat/core/assist/: assistant.py
src/devchat/core/config/: config.py
src/devchat/core/security/: analyzer.py
src/devchat/core/test_generation/: generator.py
src/devchat/core/visualization/: visualizer.py
src/devchat/core/workflows/: workflow.py
